--- a/Physics/My/CMakeLists.txt
+++ b/Physics/My/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_library(MyPhysics MyPhysicsManager.cpp)
-target_link_libraries(MyPhysics Geometries Common)
+target_link_libraries(MyPhysics
+    PUBLIC 
+        Geometries
+        Common
+)
 target_include_directories(MyPhysics INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
