--- a/Platform/Empty/CMakeLists.txt
+++ b/Platform/Empty/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 add_library(MyGameEngineEmpty EmptyApplication.cpp EmptyApplicationConfig.cpp)
 target_link_libraries(MyGameEngineEmpty
-    PRIVATE
+    PUBLIC
         Common
 )
