--- a/Platform/Windows/CMakeLists.txt
+++ b/Platform/Windows/CMakeLists.txt
@@ -1,28 +1,23 @@
-add_library(PlatformInterface
-    WindowsApplication.cpp
-)
-target_link_libraries(PlatformInterface
-    PUBLIC
-        Common
-)
-
 add_library(MyGameEngineD3D12
+WindowsApplication.cpp
     D3D12Application.cpp
     D3D12ApplicationConfig.cpp
 )
 target_link_libraries(MyGameEngineD3D12
     PUBLIC
+        Common
         D3DRHI
-        PlatformInterface
 )
 
-add_library(MyGameEngine
+add_library(MyGameEngineOpenGL
+    GLFWApplication.cpp
     OpenGLApplication.cpp
     OpenGLApplicationConfig.cpp
-    ${PROJECT_SOURCE_DIR}/External/src/glad/src/glad_wgl.c
 )
-target_link_libraries(MyGameEngine
+target_link_libraries(MyGameEngineOpenGL
     PUBLIC
+        Common
         OpenGLRHI
-        PlatformInterface
+    PRIVATE
+        glfw
 )
