--- a/RHI/OpenGL/CMakeLists.txt
+++ b/RHI/OpenGL/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_library(OpenGLRHI
     OpenGLGraphicsManager.cpp
-    ${PROJECT_SOURCE_DIR}/External/src/glad/src/glad.c
 )
 target_link_libraries(OpenGLRHI 
     PRIVATE
         GraphicsManager
         ${OPENGL_LIBRARIES}
+        glad::glad
 )
 target_include_directories(OpenGLRHI INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
