use vcpkg to import libjpeg and libpng

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(crossguid CONFIG REQUIRED)
 find_package(ZLIB REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
+find_package(JPEG REQUIRED)
+find_package(libpng CONFIG REQUIRED)
 
 
 
@@ -23,16 +25,11 @@ ENDIF(${UNIX})
 include_directories("${PROJECT_SOURCE_DIR}/Platform/${TARGET_PLATFORM}")
 set(EXTERNAL_ROOT ${PROJECT_SOURCE_DIR}/External/${TARGET_PLATFORM})
 include_directories("${EXTERNAL_ROOT}/include")
-include_directories("${EXTERNAL_ROOT}/include/bullet")
 set(EXTERNAL_LIBRARY_PATH ${EXTERNAL_ROOT}/lib)
 
 
 find_library(OPENDDL_LIBRARY OpenDDL PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 find_library(OPENGEX_LIBRARY OpenGEX PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
-find_library(BULLET_COLLISION_LIBRARY NAMES BulletCollision PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
-find_library(BULLET_DYNAMICS_LIBRARY NAMES BulletDynamics PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
-find_library(BULLET_LINEARMATH_LIBRARY NAMES LinearMath PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
-find_library(TURBO_JPEG_LIBRARY NAMES turbojpeg-static PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 
 
 include(CTest)
