--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG")
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 find_package(OpenGL REQUIRED)
 find_package(crossguid CONFIG REQUIRED)
 find_package(ZLIB REQUIRED)
@@ -13,8 +15,7 @@ find_package(glad CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(JPEG REQUIRED)
 find_package(libpng CONFIG REQUIRED)
-
-
+find_package(FBX REQUIRED)
 
 IF(${UNIX})
     set(TARGET_PLATFORM "Linux")
@@ -31,11 +32,8 @@ set(EXTERNAL_LIBRARY_PATH ${EXTERNAL_ROOT}/lib)
 find_library(OPENDDL_LIBRARY OpenDDL PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 find_library(OPENGEX_LIBRARY OpenGEX PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 
-
+find_package(GTest CONFIG REQUIRED)
 include(CTest)
-find_package(GTest  REQUIRED)
-include(GoogleTest)
-include_directories(${GTEST_INCLUDE_DIR})
 
 add_subdirectory(Framework)
 add_subdirectory(Game)
