--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.eap filter=lfs diff=lfs merge=lfs -text
 *.ldb filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
 External/Linux/bin filter=lfs diff=lfs merge=lfs -text
 External/Linux/bin/ispc filter=lfs diff=lfs merge=lfs -text
+External/Windows/bin/ispc filter=lfs diff=lfs merge=lfs -text
