--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,3 @@
-*.psd filter=lfs diff=lfs merge=lfs -text
-*.eap filter=lfs diff=lfs merge=lfs -text
-*.ldb filter=lfs diff=lfs merge=lfs -text
-External/Linux/bin filter=lfs diff=lfs merge=lfs -text
-External/Linux/bin/ispc filter=lfs diff=lfs merge=lfs -text
+External/Linux/lib/** filter=lfs diff=lfs merge=lfs -text
+External/Windows/lib/** filter=lfs diff=lfs merge=lfs -text
+Asset/** filter=lfs diff=lfs merge=lfs -text
