--- a/Framework/Common/CMakeLists.txt
+++ b/Framework/Common/CMakeLists.txt
@@ -6,7 +6,7 @@ target_include_directories(Dependency INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 add_library(Common          BaseApplication.cpp GameLogic.cpp main.cpp)
 add_library(MemoryManager   Allocator.cpp MemoryManager.cpp)
 add_library(AssetLoader     AssetLoader.cpp)
-add_library(SceneManager    SceneManager.cpp Scene.cpp SceneObject.cpp)
+add_library(SceneManager    SceneManager.cpp Scene.cpp SceneObject.cpp Image.cpp)
 add_library(GraphicsManager GraphicsManager.cpp)
 add_library(DebugManager    DebugManager.cpp)
 add_library(InputManager    InputManager.cpp)
