fix memory leak: Image destructor, move constructors, move assignment RigidBody use shared_ptr<void> to avid memory leak parser, vertex array and index array use allocator to avoid memory leak. Known issues: 8 byte memory leak in FBX SDK

--- a/Framework/Parser/CMakeLists.txt
+++ b/Framework/Parser/CMakeLists.txt
@@ -11,6 +11,7 @@ target_link_libraries(Parser
     PRIVATE
         Interface
         CommonHeader
+        MemoryManager
         GeomMath
         ${OPENGEX_LIBRARY} 
         ${OPENDDL_LIBRARY}
