--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(JPEG REQUIRED)
 find_package(libpng CONFIG REQUIRED)
 find_package(assimp CONFIG REQUIRED)
+find_package(freetype CONFIG REQUIRED)
 
 find_package(GTest CONFIG REQUIRED)
 include(CTest)
