--- a/Framework/Parser/CMakeLists.txt
+++ b/Framework/Parser/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_library(Parser
     BMP.cpp
-    # FBX.cpp
     Assimp.cpp
     JPEG.cpp
     PNG.cpp
@@ -10,20 +9,18 @@ add_library(Parser
 target_link_libraries(Parser
     PRIVATE
         Interface
-        CommonHeader
         MemoryManager
         GeomMath
         ${JPEG_LIBRARIES}
         png
         assimp::assimp AssetLoader
-        # ${FBX_LIBRARIES}
 )
 target_include_directories(Parser
     INTERFACE
         ${CMAKE_CURRENT_SOURCE_DIR}
     PRIVATE
-        # ${FBX_INCLUDE_DIR}
         ${JPEG_INCLUDE_DIR}
+        "$<TARGET_PROPERTY:CommonHeader,INTERFACE_INCLUDE_DIRECTORIES>"
 )
 target_compile_options(Parser PRIVATE -Wno-pragma-pack)
 
