--- a/Hitagi/Graphics/CMakeLists.txt
+++ b/Hitagi/Graphics/CMakeLists.txt
@@ -1,6 +1,9 @@
+add_library(ShaderManager ShaderManager.cpp)
+target_link_libraries(ShaderManager PRIVATE FileIOManager)
+
 add_library(GraphicsManager GraphicsManager.cpp)
 target_include_directories(GraphicsManager INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(GraphicsManager PUBLIC SceneManager PhysicsManager PRIVATE freetype)
+target_link_libraries(GraphicsManager PUBLIC SceneManager PhysicsManager ShaderManager PRIVATE freetype)
 
 add_subdirectory(Empty)
 add_subdirectory(OpenGL)
