--- a/Hitagi/Graphics/D3D/CMakeLists.txt
+++ b/Hitagi/Graphics/D3D/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(D3DRHI
     DescriptorAllocator.cpp
     DynamicDescriptorHeap.cpp
     RootSignature.cpp
+    PipelineState.cpp
 )
 add_library(d3dUtil d3dUtil.cpp)
 target_link_libraries(D3DRHI
