Use GLFW3 Create windows and process input.

--- a/Hitagi/Graphics/DX12/CMakeLists.txt
+++ b/Hitagi/Graphics/DX12/CMakeLists.txt
@@ -15,7 +15,7 @@ target_link_libraries(D3DRHI
         d3d12
         dxgi
         d3dcompiler
-        HitagiEngineD3D12
+        GLFWApplication
     PUBLIC
         GraphicsManager
 )
