--- a/Hitagi/Graphics/OpenGL/CMakeLists.txt
+++ b/Hitagi/Graphics/OpenGL/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(OpenGLRHI
 target_link_libraries(OpenGLRHI 
     PRIVATE
         GraphicsManager
+        GLFWApplication
         ${OPENGL_LIBRARIES}
         glad::glad
 )
